correction de z-index css

--- a/src/components/atoms/NavLink/MyNavLink.module.scss
+++ b/src/components/atoms/NavLink/MyNavLink.module.scss
@@ -84,6 +84,6 @@
     }
 
     .icon {
-      font-size: v.$font-size-h2;
+      font-size: v.$font-size-h1;
     }
 }
