--- a/src/components/organisms/EditMaisonForm/EditMaisonForm.module.scss
+++ b/src/components/organisms/EditMaisonForm/EditMaisonForm.module.scss
@@ -59,7 +59,7 @@
 // Conteneur interne de react-leaflet
 .map {
   width: 100%;
-  height: 655px; // Hauteur pour la vue desktop
+  height: 682px; // Hauteur pour la vue desktop
   border: none;
 }
 
